frontend/tests/cases/positive/privatise.gr
privatise : Int [Public] → Int [Private]
privatise [x] = [x]
