frontend/tests/cases/negative/holes/hole0.gr
foo : Int [4]
foo = [?]